--- a/simplechat.html
+++ b/simplechat.html
@@ -3,6 +3,7 @@
   <meta property="og:title" content="SimpleChat"/>
   <meta property="og:url" content="http://sc.meteor.com"/>
   <meta property="og:description" content="Simple chat application written in meteor."/>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
