Disable autocomplete on input elements and make sure the user actually typed a message

--- a/simplechat.html
+++ b/simplechat.html
@@ -20,7 +20,7 @@
     <form id="register_form">
       <div id="warning">{{warning}}</div>
       <label>Username: </label>
-      <input type="text" id="register" placeholder="Enter Username" />
+      <input type="text" id="register" placeholder="Enter Username" autocomplete="off" />
     </form>
   </div>
   {{/unless}}
@@ -45,7 +45,7 @@
     </div>
   </div>
   <form id="input_form">
-    <input type="text" id="input" placeholder="Enter Message" />
+    <input type="text" id="input" placeholder="Enter Message" autocomplete="off" />
   </form>
   {{/if}}
 </template>
