Changed how timestamps are handled, now they are always PST

--- a/simplechat.html
+++ b/simplechat.html
@@ -37,7 +37,7 @@
     <div id="chat">
       {{#each messages}}
         <div>
-          <span class="sidebar"><span class="time">{{formatted_date}}</span><span class="user">&lt;{{user}}&gt;</span></span>
+          <span class="sidebar"><span class="time">{{formatted_date date}}</span><span class="user">&lt;{{user}}&gt;</span></span>
           <span class="msg">{{text}}</span>
           <div class='clearfix' />
         </div>
