Refactored warnings, it was ugly

--- a/simplechat.html
+++ b/simplechat.html
@@ -18,7 +18,7 @@
   {{#unless signed_in}}
   <div id="register_window">
     <form id="register_form">
-      <div id="warning">{{warning}}</div>
+      <div id="warning"></div>
       <label>Username: </label>
       <input type="text" id="register" placeholder="Enter Username" autocomplete="off" />
     </form>
