https for the win

--- a/simplechat.html
+++ b/simplechat.html
@@ -1,9 +1,9 @@
 <head>
   <title>SimpleChat</title>
   <meta property="og:title" content="SimpleChat"/>
-  <meta property="og:url" content="http://sc.meteor.com"/>
+  <meta property="og:url" content="https://sc.meteor.com"/>
   <meta property="og:description" content="Simple chat application written in meteor."/>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
